# XLog

./: .clang-format  .gitignore  CMakeLists.txt  README.md  XLog.sln
XLog/: XLog.vcxproj  XLog.vcxproj.filters  XLogger.cpp  XLogger.h  main.cpp
source/: XLogger.cpp
